Spacing fix

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -24,6 +24,4 @@ body {
     width: 99%;
     padding-bottom: 15px;
     background-image: url(http://verge.moe/assets/images/light-triangles.png) !important;
-    float: left;
-
 }
